--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "illuminate/events": "^11.19",
         "symfony/http-foundation": "^7.1",
         "cartalyst/sentinel": "^8.0",
-        "slim/csrf": "^1.5"
+        "slim/csrf": "^1.5",
+        "respect/validation": "^2.3"
     }
 }
