--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/http-foundation": "^7.1",
         "cartalyst/sentinel": "^8.0",
         "slim/csrf": "^1.5",
-        "respect/validation": "^2.3"
+        "respect/validation": "^2.3",
+        "illuminate/pagination": "^11.20"
     }
 }
